--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd-number {
+    background-color: pink;
+    font-family: "Verdana", "DejaVu Sans";
+}
+
+.two-element {
+    color: blue;
+    font-size: 36px;
+}
+
+.third-element {
+    font-size: 24px;
+}
+
+.four-element {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
