--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -9,9 +9,17 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+}
+
+.header__logo {
+  display: flex;
+  gap: 20px;
 }
 
 .profile-image {
@@ -27,6 +35,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -45,4 +54,16 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+}
+
+.links {
+  display: flex;
+  gap: 20px
+}
+
+.button__block {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
