--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  margin: 0 auto;
+  text-align: center;
 }
 
 img {
@@ -10,6 +12,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 /* do not edit this footer */
@@ -23,4 +27,17 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
 }
