--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -16,6 +16,8 @@ body {
 }
 
 .modal {
+  display: flex;
+  gap: 20px;
   background: white;
   width: 480px;
   border-radius: 10px;
@@ -33,6 +35,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0px 10px;
 }
 
 .close-button {
@@ -66,4 +69,9 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.conteiner__icon {
+  display: flex;
+  justify-content: space-between;
 }
