--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -14,16 +14,41 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.block {
+  display: flex;
 }
 
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+  flex-shrink: 0;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  margin-right: 50px;
+}
+
+.cards {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 50px;
 }
 
 .card {
+  width: 300px;
+  height: 300px;
+  display: flex;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  gap: 30px;
 }
